--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
   <div class="wrapper">
-    <div class="credits"><a href="https://github.com/bitbrain/jekyll-dash">dash</a> theme for Jekyll by <a href="https://github.com/bitbrain">bitbrain</a> made with <i class="fas fa-heart"></i>
+    <div class="credits">personel blog by <a href="https://github.com/ergulburak">ergulburak</a> made with <i class="fas fa-heart"></i>
       {%- include theme-toggle.html -%}
     </div>
   </div>
