--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -4,7 +4,7 @@ layout: default
 {% unless site.dash.show_author == false %}
   {% include author.html %}
 {% endunless %}
-<h1 class="post-title">articles tagged with <a class="tag" href="/tag/{{ page.tag }}/">{{ page.tag }}</a></h1>
+<h1 class="post-title"><a class="tag" href="/tag/{{ page.tag }}/">{{ page.tag }}</a>ile etiketlenmiş makaleler</h1>
   <div class="post-links">
   {% for post in site.posts %}
   {% for tag in post.tags %}
