--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,7 @@
+--- 
+layout: default 
 ---
-layout: default
----
-
-{{ content }}
+<div class="post">
+    <h1>{{ page.title }}</h1>
+    {{ content }}
+</div>
