--- a/_sass/dash/_base.scss
+++ b/_sass/dash/_base.scss
@@ -1,205 +1,241 @@
 body {
-  font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
-  -webkit-text-size-adjust: 100%;
-  -webkit-font-feature-settings: "kern" 1;
-     -moz-font-feature-settings: "kern" 1;
-       -o-font-feature-settings: "kern" 1;
-          font-feature-settings: "kern" 1;
-  font-kerning: normal;
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-
-  @include themed() {
-      background-color: t('background-color-alt');
-      color: t('foreground-color');
-  }
+    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
+    -webkit-text-size-adjust: 100%;
+    -webkit-font-feature-settings: "kern" 1;
+    -moz-font-feature-settings: "kern" 1;
+    -o-font-feature-settings: "kern" 1;
+    font-feature-settings: "kern" 1;
+    font-kerning: normal;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    @include themed() {
+        background-color: t('background-color-alt');
+        color: t('foreground-color');
+    }
 }
 
-body, html {
-  margin: 0;
-  padding: 0;
+body,
+html {
+    margin: 0;
+    padding: 0;
 }
 
 *:focus {
     outline: none;
 }
 
+
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
-h1, h2, h3, h4, h5, h6,
-blockquote, pre,
-ul, ol, dl, figure,
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+blockquote,
+pre,
+ul,
+ol,
+dl,
+figure,
 %vertical-rhythm {
-  margin-bottom: $spacing-unit / 3;
+    margin-bottom: $spacing-unit / 3;
 }
 
 p {
-  margin: 0.5em 0;
+    margin: 0.5em 0;
 }
 
 figure {
-  width: 100%;
-  margin: 0;
+    width: 100%;
+    margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  color: $color-blue;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: $color-blue;
 }
+
 
 /**
  * `main` element
  */
+
 main {
-  display: block; /* Default value of `display` of `main` element is 'inline' in IE 11. */
+    display: block;
+    /* Default value of `display` of `main` element is 'inline' in IE 11. */
 }
+
 
 /**
  * Images
  */
+
 img {
-  max-width: 100%;
-  vertical-align: middle;
+    display: block;
+    max-width: 100%;
+    margin-bottom: var(--spacer);
+    border-radius: var(--border-radius);
+    margin: 10px;
+    //vertical-align: middle;
 }
+
 
 /**
  * Figures
  */
-figure > img {
-  display: block;
+
+figure>img {
+    display: block;
 }
 
 figcaption {
-  font-size: $small-font-size;
+    font-size: $small-font-size;
 }
+
 
 /**
  * Lists
  */
-ul, ol {
-  margin-left: $spacing-unit;
+
+ul,
+ol {
+    margin-left: $spacing-unit;
 }
 
 li {
-  > ul,
-  > ol {
-    margin-bottom: 0;
-  }
+    >ul,
+    >ol {
+        margin-bottom: 0;
+    }
 }
 
 video {
-  width: 100%;
-  border-radius: 0.3em;
+    width: 100%;
+    border-radius: 0.3em;
 }
+
 
 /**
  * Headings
  */
-h1, h2, h3, h4, h5, h6 {
-  font-weight: $base-font-weight;
-  margin-top: 1em;
-  margin-bottom: 0.4em;
-  text-align: left;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: $base-font-weight;
+    margin-top: 1em;
+    margin-bottom: 0.4em;
+    text-align: left;
 }
+
 
 /**
  * Links
  */
+
 a {
-  color: $color-pink;
-  text-decoration: none;
-
-  &:hover {
-    @include themed() {
-       color: t('foreground-color');
-    }
-    text-decoration: underline;
-  }
-
-  .social-media-list &:hover {
+    color: $color-pink;
     text-decoration: none;
-
-    .username {
-      text-decoration: underline;
+    &:hover {
+        @include themed() {
+            color: t('foreground-color');
+        }
+        text-decoration: underline;
     }
-  }
+    .social-media-list &:hover {
+        text-decoration: none;
+        .username {
+            text-decoration: underline;
+        }
+    }
 }
 
 
 /**
  * Blockquotes
  */
+
 blockquote {
-  @include themed() {
+    @include themed() {
         color: t('background-color');
-  }
-  @include relative-font-size(1.125);
-  letter-spacing: -1px;
-  font-style: italic;
-
-  > :last-child {
-    margin-bottom: 0;
-  }
+    }
+    @include relative-font-size(1.125);
+    letter-spacing: -1px;
+    font-style: italic;
+    > :last-child {
+        margin-bottom: 0;
+    }
 }
-
 
 
 /**
  * Code formatting
  */
+
 pre,
 code {
-  @include relative-font-size(0.9375);
-  border-radius: 0.3em;
-  @include themed() {
-     background-color: $color-background-dark;
-     color: $color-foreground;
-  }
+    @include relative-font-size(0.9375);
+    border-radius: 0.3em;
+    @include themed() {
+        background-color: $color-background-dark;
+        color: $color-foreground;
+    }
 }
 
 code {
-  padding: 1px 5px;
+    padding: 1px 5px;
 }
 
 pre {
-  padding: 8px 12px;
-  overflow-x: auto;
-
-  > code {
-    border: 0;
-    padding-right: 0;
-    padding-left: 0;
-  }
+    padding: 8px 12px;
+    overflow-x: auto;
+    >code {
+        border: 0;
+        padding-right: 0;
+        padding-left: 0;
+    }
 }
+
 
 /**
  * Wrapper
  */
+
 .wrapper {
-  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-  max-width:         calc(#{$content-width} - (#{$spacing-unit}));
-  margin-right: auto;
-  margin-left: auto;
-  padding-right: $spacing-unit / 2;
-  padding-left: $spacing-unit / 2;
-  @extend %clearfix;
-
-  @media screen and (min-width: $on-large) {
-    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
-    padding-right: $spacing-unit;
-    padding-left: $spacing-unit;
-  }
+    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
+    max-width: calc(#{$content-width} - (#{$spacing-unit}));
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: $spacing-unit / 2;
+    padding-left: $spacing-unit / 2;
+    @extend %clearfix;
+    @media screen and (min-width: $on-large) {
+        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
+        max-width: calc(#{$content-width} - (#{$spacing-unit} * 2));
+        padding-right: $spacing-unit;
+        padding-left: $spacing-unit;
+    }
 }
-
 
 
 /**
  * Clearfix
  */
+
 %clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
+    content: "";
+    display: table;
+    clear: both;
 }
